2003-06-06  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* index.php: 
	Put birthday statement in past. Might be removed at all.

	* web-theme/classes/birthday_class.inc: 
	Added referer link to the decoration to allow easier navigation.

	* logo-competition/logos/Stefan_Bergmeier/*: 
	* logo-competition/logos_new.php:
	Added logos from Stefan Bergmeier.
	
2003-06-04  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/Felix_E_Klee/index.php: 
	* logo-competition/logos_new.php:
	Added logos from Felix E. Klee (again.)

	* logo-competition/index.php:
	Added image size info and alt tag

2003-06-04  Mikhael Goikhman  <migo@homemail.com>

	* documentation/index.php:
	use width for columns so they are properly centered in some browsers

	* web-theme/classes/default_class.inc:
	make quick list be centered in all browsers

	* web-theme/classes/plain_class.inc:
	print title names in plain theme (were ignored)

2003-06-03  Uwe Pross  <uwe.pross@gmx.net>

	* web-theme/themes/theme_descriptions.inc: 
	* web-theme/themes/plain_theme.inc: 
	* web-theme/classes/plain_class.inc:
	Made foreground and background of plain theme customizeable.

	* customize_theme/theme_descriptions_helper.inc: 
	Fixed propagation of theme variable when using propagation
	method GET.

	* logo-competition/logos/color_select.inc: 
	Made color selection possible for other themes.

2003-06-03  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>

	* logo-competition/logos/color_select.inc: 
	Disabled color selection for all themes except birthday theme.

	* logo-competition/logos_new.php:
	Added Scott Smedley's logos

2003-06-02  Uwe Pross  <uwe.pross@gmx.net>

	* index.php: 
	Added link to download page. Used new function mylink.

	* web-theme/helpers/members2globals.inc: 
	added function mylink($target, $text, $opt="") to get simpler
	internal links.

	* web-theme/classes/birthday_class.inc: 
	disabled cookies and session for birthday theme.
