@@ -1,3 +1,9 @@
+2003-06-08  Uwe Pross  <uwe.pross@gmx.net>
+
+	* logo-competition/logos_new.php (border): 
+	* logo-competition/logos/Aric_Campling/index.php: 
+	Added logos from Aric Campling.
+
 2003-06-06  Uwe Pross  <uwe.pross@e-technik.tu-chemnitz.de>
 
 	* index.php: 
